# forward-prediction-api

./: .gitignore  Dockerfile  README.md  download_trained_models.sh  pyproject.toml
app/: dependencies.py  main.py
app/api/routes/: prediction.py
app/core/: config.py
app/schemas/: prediction.py  pubchem.py
app/services/: opennmt_model_runner.py  prediction.py  pubchem_api.py
app/utils/: reaction_drawer.py
