[project]
name = "forward-prediction-api"
version = "0.1.0"
description = "Forward Prediction API"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
    "torch>=1.13.0,<1.14.0",
    "numpy<2.0.0",
    "opennmt-py==1.2.0",
    "rdkit>=2025.3.5",
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.10.1",
    "isort>=5.13.2",
    "black>=24.4.2",
]
